--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -67,14 +67,14 @@
 						<label for="name" class="col-sm-3 control-label">Name</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Insert the name of the therapy.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="default-duration" class="col-sm-3 control-label">Default Duration</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="default-duration" id="default-duration"/>
-							<p class="help-block">This will be measured in minutes.</p>
+							<p class="help-block">This will be measured in minutes. Please insert a number.</p>
 						</div>
 					</div>
 					<div class="form-group">
@@ -95,14 +95,14 @@
 
 								#[/collection]
 							</select>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Select the tracers required for this therapy.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="tracer-dose" class="col-sm-3 control-label">Tracer Dose</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="tracer-dose" id="tracer-dose"/>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Insert the required dose for this therapy.</p>
 						</div>
 					</div>
 					<div class="form-group">
@@ -123,7 +123,7 @@
 
 								#[/collection]
 							</select>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Select the required camera type for this therapy.</p>
 						</div>
 					</div>
 
