--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -63,7 +63,7 @@
 						<label for="name" class="col-sm-3 control-label">Name</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Insert the name of the user.</p>
 						</div>
 					</div>
 					<div class="form-group">
@@ -94,14 +94,14 @@
 
 								#[/collection]
 							</select>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Select the role staff for the user.</p>
 						</div>
 					</div>
 					<div class="form-group create-mode">
 						<label for="password" class="col-sm-3 control-label">Password</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="password" name="password" id="password"/>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Password must contain at least 6 characters.</p>
 						</div>
 					</div>
 					<div class="form-group create-mode">
