Staff_Role help text fields completed.

--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -61,7 +61,7 @@
 						<label for="label" class="col-sm-3 control-label">Role Title</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="label" id="label"/>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">Insert the name of the role.</p>
 						</div>
 					</div>
 					<div class="form-group">
