Small changes to all the fields following Fares feedback

--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -62,14 +62,14 @@
 						<label for="name" class="col-sm-3 control-label">Name</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block">Insert patient name as FIRST NAME and LAST NAME</p>
+							<p class="help-block"> Enter the patient name in the format : FIRST NAME LAST NAME. <small>e.g. John Casey</small></p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="hospital-number" class="col-sm-3 control-label">Hospital Number</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="hospital-number" id="hospital-number"/>
-							<p class="help-block">Insert patient Hospital Number.</p>
+							<p class="help-block">Enter the patient Hospital Number.</p>
 						</div>
 					</div>
 					<div class="form-group">
