--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -58,7 +58,7 @@
 						<label for="label" class="col-sm-3 control-label">Label</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="label" id="label"/>
-							<p class="help-block">Insert the name of the camera type.</p>
+							<p class="help-block">Enter the name of the camera type.</p>
 						</div>
 					</div>
 				</form>
