--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -75,14 +75,14 @@
 
 								#[/collection]
 							</select>
-							<p class="help-block">Select the type of the camera you want to create.</p>
+							<p class="help-block">Select the type of the camera.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="room-number" class="col-sm-3 control-label">Room Number</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="room-number" id="room-number"/>
-							<p class="help-block">Insert the number of the new camera.</p>
+							<p class="help-block">Enter the number of the camera.</p>
 						</div>
 					</div>
 				</form>
