--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -63,7 +63,7 @@
 						<label for="name" class="col-sm-3 control-label">Name</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block">Insert the name of the user.</p>
+							<p class="help-block">Enter the name of the user.</p>
 						</div>
 					</div>
 					<div class="form-group">
