--- a/src/main/resources/static/tracers.html
+++ b/src/main/resources/static/tracers.html
@@ -60,14 +60,14 @@
 						<label for="name" class="col-sm-3 control-label">Name</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block">Insert the name of the tracer.</p>
+							<p class="help-block">Enter the name of the tracer.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="order-time" class="col-sm-3 control-label">Order Time</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="order-time" id="order-time"/>
-							<p class="help-block">This is the order lead time in days. Please insert a number.</p>
+							<p class="help-block">This is the order lead time in days. Please enter a number.</p>
 						</div>
 					</div>
 
