--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -82,7 +82,7 @@
 						<label for="room-number" class="col-sm-3 control-label">Room Number</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="room-number" id="room-number"/>
-							<p class="help-block">Enter the number of the camera.</p>
+							<p class="help-block">Enter the room number of the camera.</p>
 						</div>
 					</div>
 				</form>
