--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -62,21 +62,21 @@
 						<label for="name" class="col-sm-3 control-label">Name</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block"> Enter the patient name in the format : FIRST NAME LAST NAME. <small>e.g. John Casey</small></p>
+							<p class="help-block"> Enter the patient's full name.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="hospital-number" class="col-sm-3 control-label">Hospital Number</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="hospital-number" id="hospital-number"/>
-							<p class="help-block">Enter the patient Hospital Number.</p>
+							<p class="help-block">Enter the patient's hospital number.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="date-of-birth" class="col-sm-3 control-label">Date of Birth</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="text" name="date-of-birth" id="date-of-birth"/>
-							<p class="help-block"> Select date of birth of the patient.</p>
+							<p class="help-block">Select the patient's date of birth.</p>
 						</div>
 					</div>
 
