--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -73,7 +73,7 @@
 								<input class="form-control" type="text" name="username" id="username">
 								<span class="input-group-addon"><i class="fa fa-barcode"></i></span>
 							</div>
-							<p class="help-block">We suggest you use the barcode scanner here.</p>
+							<p class="help-block">Enter a unique username.</p>
 						</div>
 					</div>
 					<div class="form-group">
@@ -94,7 +94,7 @@
 
 								#[/collection]
 							</select>
-							<p class="help-block">Select the role staff for the user.</p>
+							<p class="help-block">Select the role for the staff member.</p>
 						</div>
 					</div>
 					<div class="form-group create-mode">
