--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -95,7 +95,7 @@
 
 								#[/collection]
 							</select>
-							<p class="help-block">Select the tracers required for this therapy.</p>
+							<p class="help-block">Select the tracer required for this therapy.</p>
 						</div>
 					</div>
 					<div class="form-group">
