--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -127,6 +127,13 @@
 						</div>
 					</div>
 
+                    <div class="form-group patient-question-section">
+                        <label class="col-sm-3 control-label">Patient Questions</label>
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="patient-question-0"/>
+                            <a href="javascript:;" class="add-question"><span class="fa fa-plus"></span> Add Question</a>
+                        </div>
+                    </div>
 				</form>
 
 			</div>
