work in progress: change password

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -27,6 +27,10 @@
         <script src="/js/plugins/data-tables/data-tables.bootstrap.js"></script>
         <script src="/js/plugins/data-tables/wrapper.js"></script>
 
+        <!--
+        <script src="/js/pass-indicator.js"></script>
+        -->
+
 		<!--[if lt IE 9]>
 		<script src="/js/core/html5shiv.js"></script>
 		<script src="/js/core/respond.min.js"></script>
@@ -81,6 +85,9 @@
 							<li>
 								<a href="#"><i class="fa fa-fw fa-lg fa-user"></i> Profile</a>
 							</li>
+                            <li>
+                                <a href="/change-password"><i class="fa fa-fw fa-lg fa-lock"></i> Change Password</a>
+                            </li>
 							<li>
 								<a href="/logout"><i class="fa fa-fw fa-lg fa-power-off"></i> Log Out</a>
 							</li>
