fixed the dropdown menu width when clicking on user to access user settings

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -81,7 +81,7 @@
 							#current-user-name
 							<b class="caret"></b>
 						</a>
-						<ul class="dropdown-menu">
+						<ul class="dropdown-menu user-dropdown-menu">
 							<li>
 								<a href="#"><i class="fa fa-fw fa-lg fa-user"></i> Profile</a>
 							</li>
