drop down menus fixed

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -103,7 +103,7 @@
 						</li>
 						<li>
 							<a href="javascript:;"><i class="fa fa-fw fa-lg fa-angle-down"></i> Manage Resources</a>
-							<ul class="nav navbar-nav">
+							<ul class="nav navbar-nav drop-down-menu">
 								<li#[if: current-page = cameras] class="active"#[/if]>
 									<a href="/cameras"><i class="fa fa-fw fa-lg fa-camera"></i> Cameras</a>
 								</li>
@@ -120,7 +120,7 @@
 						</li>
 						<li>
 							<a href="javascript:;"><i class="fa fa-fw fa-lg fa-angle-down"></i> Manage Staff</a>
-							<ul class="nav navbar-nav">
+							<ul class="nav navbar-nav drop-down-menu">
 								<li#[if: current-page = staff] class="active"#[/if]>
 									<a href="/staff"><i class="fa fa-fw fa-lg fa-user-md"></i> Staff Accounts</a>
 								</li>
