--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -5,92 +5,116 @@
 ##_header.html
 
 <div class="row">
-	<div class="col-lg-12 col-md-12">
-		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Patient
-			</button>
-		</div>
-		<table class=" table table-bordered table-hover" id="patients-table">
-			<thead>
-				<tr>
-					<th class="text-center">Patient Name</th>
-					<th class="text-center">Hospital Number</th>
-					<th class="text-center">Date of birth</th>
-					<th class="text-center">Action</th>
-				</tr>
-			</thead>
-			<tbody>
-				#[collection: patients]
+    <div class="col-lg-12 col-md-12">
+        <div class="text-right">
+            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Patient
+            </button>
+        </div>
+        <table class=" table table-bordered table-hover" id="patients-table">
+            <thead>
+            <tr>
+                <th class="text-center">Patient Name</th>
+                <th class="text-center">Hospital Number</th>
+                <th class="text-center">Date of birth</th>
+                <th class="text-center">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            #[collection: patients]
 
-				#[pre]#[/pre]
+            #[pre]#[/pre]
 
-				#[each]
-				<tr>
-					<td>#name</td>
-					<td>#hospital-number</td>
-					<td>#date-of-birth</td>
-					<td>
-						<button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
-					</td>
-				</tr>
-				#[/each]
+            #[each]
+            <tr>
+                <td>#name</td>
+                <td>#hospital-number</td>
+                <td>#date-of-birth</td>
+                <td>
+                    <button class="btn edit-button" data-id="#id">Edit</button>
+                    <button class="btn delete-button" data-id="#id">Delete</button>
+                </td>
+            </tr>
+            #[/each]
 
-				#[post]#[/post]
+            #[post]#[/post]
 
-				#[empty]#[/empty]
+            #[empty]#[/empty]
 
-				#[/collection]
-			</tbody>
-		</table>
+            #[/collection]
+            </tbody>
+        </table>
 
-	</div>
+    </div>
 </div>
 
 <div class="modal hide fade edit-modal">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h3 class="edit-mode">Edit Patient</h3>
-				<h3 class="create-mode">Create Patient</h3>
-			</div>
-			<div class="modal-body">
-				<form class="form-horizontal edit-form">
-					<input type="hidden" name="entity-type" value="patient"/>
-					<input type="hidden" name="entity-id" value="0"/>
-					<div class="form-group">
-						<label for="name" class="col-sm-3 control-label">Name</label>
-						<div class="col-sm-9">
-							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block"> Enter the patient name in the format : FIRST NAME LAST NAME. <small>e.g. John Casey</small></p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="hospital-number" class="col-sm-3 control-label">Hospital Number</label>
-						<div class="col-sm-9">
-							<input class="form-control" type="text" name="hospital-number" id="hospital-number"/>
-							<p class="help-block">Enter the patient Hospital Number.</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="date-of-birth" class="col-sm-3 control-label">Date of Birth</label>
-						<div class="col-sm-9">
-							<input class="form-control" type="text" name="date-of-birth" id="date-of-birth"/>
-							<p class="help-block"> Select date of birth of the patient.</p>
-						</div>
-					</div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="edit-mode">Edit Patient</h3>
 
-				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel">Cancel</button>
-				<button type="button" class="btn btn-primary btn-save">Ok</button>
-			</div>
-		</div>
-	</div>
+                <h3 class="create-mode">Create Patient</h3>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal edit-form">
+                    <input type="hidden" name="entity-type" value="patient"/>
+                    <input type="hidden" name="entity-id" value="0"/>
+
+                    <div class="form-group">
+                        <label for="name" class="col-sm-3 control-label">Name</label>
+
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="name" id="name"/>
+
+                            <p class="help-block"> Enter the patient name in the format : FIRST NAME LAST NAME.
+                                <small>e.g. John Casey</small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="hospital-number" class="col-sm-3 control-label">Hospital Number</label>
+
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="hospital-number" id="hospital-number"/>
+
+                            <p class="help-block">Enter the patient Hospital Number.</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="day-of-birth" class="col-sm-3 control-label">Date of Birth</label>
+
+                        <div class="form-group col-sm-9">
+                            <div class="col-sm-4">
+                                <select class="form-control" name="year-of-birth" id="year-of-birth">
+                                    <option value="" disabled selected>Year</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-5">
+                                <select class="form-control" name="month-of-birth" id="month-of-birth" disabled>
+                                    <option value="" disabled selected>Month</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-3">
+                                <select class="form-control" name="day-of-birth" id="day-of-birth" disabled>
+                                    <option value="">Day</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-cancel">Cancel</button>
+                <button type="button" class="btn btn-primary btn-save">Ok</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="/js/patients.js"></script>
+<script src="/js/date-selector.js"></script>
+
 
 #[def: entity-name-title = Patient]
 #[def: entity-name-body = patient]
