Created profile page

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -83,11 +83,8 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a href="#"><i class="fa fa-fw fa-lg fa-user"></i> Profile</a>
+								<a href="/profile"><i class="fa fa-fw fa-lg fa-user"></i> Profile</a>
 							</li>
-                            <li>
-                                <a href="/change-password"><i class="fa fa-fw fa-lg fa-lock"></i> Change Password</a>
-                            </li>
 							<li>
 								<a href="/logout"><i class="fa fa-fw fa-lg fa-power-off"></i> Log Out</a>
 							</li>
