Moved pass-indicator to the correct folder

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -28,7 +28,7 @@
         <script src="/js/plugins/data-tables/wrapper.js"></script>
 
         <!--
-        <script src="/js/pass-indicator.js"></script>
+        <script src="/js/plugins/pass-indicator/pass-indicator.js"></script>
         -->
 
 		<!--[if lt IE 9]>
