patient questions pre-filled in edit form

--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -128,8 +128,10 @@
 					<div class="form-group patient-question-section">
 						<label class="col-sm-3 control-label">Patient Questions</label>
 						<div class="col-sm-9">
-							<input class="form-control patient-question-input" type="text" name="patient-question-1" placeholder="Leave blank if not required."/>
-							<a href="javascript:;" class="add-question"><span class="fa fa-plus"></span> Add Question</a>
+							<div class="patient-questions">
+								<input class="form-control patient-question-input" type="text" name="patient-question-0" placeholder="Leave blank if not required."/>
+							</div>
+							<br/><a href="javascript:;" class="add-question"><span class="fa fa-plus"></span> Add Question</a>
 						</div>
 					</div>
 				</form>
