Removed old camera type field from therapy table

--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -6,8 +6,7 @@
 <div class="row">
 	<div class="col-lg-12 col-md-12">
 		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Therapy
-			</button>
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Therapy</button>
 		</div>
 		<table class="table table-bordered table-hover" id="therapies-table">
 			<thead>
@@ -16,7 +15,6 @@
 					<th class="text-center">Default Duration</th>
 					<th class="text-center">Tracer Required</th>
 					<th class="text-center">Tracer Dose</th>
-					<th class="text-center">Camera Required</th>
 					<th class="text-center">Actions</th>
 				</tr>
 			</thead>
@@ -32,7 +30,6 @@
 					<td>#default-duration mins</td>
 					<td>#tracer-required-name</td>
 					<td>#tracer-dose</td>
-					<td>#camera-type-label</td>
 					<td>
 						<button class="btn edit-button" data-id="#id">Edit</button>
 						<button class="btn delete-button" data-id="#id">Delete</button>
