Booking patterns pre-filled on edit form

--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -71,7 +71,7 @@
 					<div class="form-group patient-question-section">
 						<label class="col-sm-3 control-label">Booking Pattern</label>
 						<div class="col-sm-9">
-							<div class="booking-sections">
+							<div class="booking-pattern-sections">
 								<div class="row">
 									<div class="col-sm-3">
 										<select class="form-control stacked-form-control" name="booking-section-0a">
