after raging wars and battles, datatables have been semi-sexified.

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -18,6 +18,7 @@
 		#[if: crud]
 		<link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
 		#[/if]
+        <link href="/css/tables-styling.css" rel="stylesheet" type="text/css"/>
 
 		<!-- data-tables CSS -->
         <link href="/css/plugins/data-tables/data-tables.bootstrap.css" rel="stylesheet" type="text/css"/>
