--- a/src/main/resources/static/_footer.html
+++ b/src/main/resources/static/_footer.html
@@ -7,5 +7,7 @@
 <script src="/js/plugins/toastr/toastr.min.js"></script>
 <script src="/js/crud-page.js"></script>
 #[/if]
+
+<script src="/js/plugins/data-tables/styling.js"></script>
 </body>
 </html>
