--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -27,8 +27,8 @@
 				<tr>
 					<td>#label</td>
 					<td>
-						<button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
+						<button class="btn edit-button btn-warning" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button btn-danger" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
 					</td>
 				</tr>
 				#[/each]
