Data tables on staff absences/availabilities

--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -17,7 +17,7 @@
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Absence
 			</button>
 		</div>
-		<table class=" table table-bordered table-hover">
+		<table class="table table-bordered table-hover" id="staff-absences">
 			<thead>
 				<tr>
 					<th class="text-center">From</th>
