--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -17,7 +17,7 @@
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Availability
 			</button>
 		</div>
-		<table class=" table table-bordered table-hover">
+		<table class="table table-bordered table-hover" id="staff-availabilities">
 			<thead>
 				<tr>
 					<th class="text-center">Day of week</th>
