For Mark to see - Everything up to date

--- a/src/main/resources/static/appointments.html
+++ b/src/main/resources/static/appointments.html
@@ -4,6 +4,7 @@
 
 ##_header.html
 
+//appointments page
 <div class="row">
     <div class="col-md-12 col-lg-12" id="page-one">
         <table class=" table table-bordered table-hover" id="patients-table">
