--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -195,15 +195,11 @@
 				<div class="container-fluid">
 					<div class="row">
                         <div class="col-lg-12">
-                            #[if: show-password-reminder = yes]
+                            #[def: password-reminder = yes]
+                            #[if: password-reminder = yes]
                             <div class="alert alert-warning" style="margin-top: 50px" role="alert">
-                                You have #days-since-password-changed days remaining before you will be forced to change your password. <a href="/profile">Change it now.</a>
+                                You have #pass-days-remaining days remaining before you will be forced to change your password. <a href="/profile">Change it now.</a>
                             </div>
-                            #[/if]
-                            #[if: force-password-change = yes]
-                            <script>
-                                forcePasswordChange();
-                            </script>
                             #[/if]
 							<h1 class="page-header">
 								#title
