--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -37,8 +37,13 @@
 					<td>#start-time</td>
 					<td>#end-time</td>
 					<td>
+                        #[ifperm: EDIT_STAFF_AVAILABILITIES]
 						<button class="btn edit-button" data-id="#id">Edit</button>
 						<button class="btn delete-button" data-id="#id">Delete</button>
+                        #[/ifperm]
+                        #[!ifperm: EDIT_STAFF_AVAILABILITIES]
+                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        #[/!ifperm]
 					</td>
 				</tr>
 				#[/each]
