--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -31,9 +31,14 @@
 					<td>#tracer-required-name</td>
 					<td>#tracer-dose</td>
 					<td>
-						<button class="btn edit-button" data-id="#id">Edit</button>
+                        #[ifperm: EDIT_THERAPIES]
+                        <button class="btn edit-button" data-id="#id">Edit</button>
 						<button class="btn delete-button" data-id="#id">Delete</button>
-					</td>
+                        #[/ifperm]
+                        #[!ifperm: EDIT_THERAPIES]
+                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        #[/!ifperm]
+                    </td>
 				</tr>
 				#[/each]
 
