--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -31,8 +31,13 @@
 					<td>#name</td>
 					<td>#role-label</td>
 					<td>
+                        #[ifperm: EDIT_STAFF]
 						<button class="btn edit-button" data-id="#id">Edit</button>
 						<button class="btn delete-button" data-id="#id">Delete</button>
+                        #[/ifperm]
+                        #[!ifperm: EDIT_STAFF]
+                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        #[/!ifperm]
 					</td>
 				</tr>
 				#[/each]
