edit/delete buttons are hidden for non-permissioned users. for all pages, except APPOINTMENTS. Appointment does not work on master

--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -28,8 +28,13 @@
 					<td>#label</td>
 					<td>#HTMLOKAY:permission-summary</td>
 					<td>
+                        #[ifperm: EDIT_STAFF_ROLES]
 						<button class="btn edit-button" data-id="#id">Edit</button>
 						<button class="btn delete-button" data-id="#id">Delete</button>
+                        #[/ifperm]
+                        #[!ifperm: EDIT_STAFF_ROLES]
+                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        #[/!ifperm]
 					</td>
 				</tr>
 				#[/each]
