--- a/src/main/resources/static/tracers.html
+++ b/src/main/resources/static/tracers.html
@@ -6,9 +6,11 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
-		<div class="text-right">
+        #[ifperm: EDIT_TRACERS]
+        <div class="text-right">
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add Tracer</button>
 		</div>
+        #[/ifperm]
 		<table class="table table-bordered table-hover" id="tracers-table">
 			<thead>
 				<tr>
@@ -33,7 +35,7 @@
 						<button class="btn delete-button" data-id="#id">Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_TRACERS]
-                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        -
                         #[/!ifperm]
                     </td>
 				</tr>
