--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -6,10 +6,12 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+        #[ifperm: EDIT_CAMERAS]
 		<div class="text-right">
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera Type
 			</button>
 		</div>
+        #[/ifperm]
 		<table class="table table-bordered table-hover" id="camera-types-table">
 			<thead>
 				<tr>
@@ -32,7 +34,7 @@
 						<button class="btn delete-button" id="delete-btn" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_CAMERAS]
-                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        -
                         #[/!ifperm]
                     </td>
 				</tr>
