--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -6,10 +6,12 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+        #[ifperm: EDIT_CAMERAS]
 		<div class="text-right">
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera
 			</button>
 		</div>
+        #[/ifperm]
 		<table class="table table-bordered table-hover" id="cameras-table">
 			<thead>
 				<tr>
@@ -34,7 +36,7 @@
                         <button class="btn delete-button" data-id="#id">Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_CAMERAS]
-                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        -
                         #[/!ifperm]
                     </td>
 				</tr>
