--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -13,10 +13,12 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+        #[ifperm: EDIT_STAFF_ABSENCES]
 		<div class="text-right">
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Absence
 			</button>
 		</div>
+        #[/ifperm]
 		<table class="table table-bordered table-hover" id="staff-absences">
 			<thead>
 				<tr>
@@ -40,7 +42,7 @@
 						<button class="btn delete-button" data-id="#id">Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_STAFF_ABSENCES]
-                        YOUR ROLE PERMISSIONS DOES NOT ALLOW YOU TO EDIT/DELETE
+                        -
                         #[/!ifperm]
 					</td>
 				</tr>
