--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -6,9 +6,11 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+        #[ifperm: EDIT_STAFF_ROLES]
 		<div class="text-right">
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role</button>
 		</div>
+        #[/ifperm]
 		<table class="table table-bordered table-hover" id="staff-roles-table">
 			<thead>
 				<tr>
@@ -32,7 +34,7 @@
 						<button class="btn delete-button" data-id="#id">Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_STAFF_ROLES]
-                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        -
                         #[/!ifperm]
 					</td>
 				</tr>
