--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -6,10 +6,12 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+        #[ifperm: EDIT_STAFF]
 		<div class="text-right">
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Member
 			</button>
 		</div>
+        #[/ifperm]
 		<table class="table table-bordered table-hover" id="staff-table">
 			<thead>
 				<tr>
@@ -36,7 +38,7 @@
 						<button class="btn delete-button" data-id="#id">Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_STAFF]
-                        YOUR ROLE PERMISSIONS DO NOT ALLOW YOU TO EDIT/DELETE
+                        -
                         #[/!ifperm]
 					</td>
 				</tr>
