--- a/src/main/resources/static/patient-details.html
+++ b/src/main/resources/static/patient-details.html
@@ -56,11 +56,52 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<p>TODO</p>
+		<table class="table table-bordered table-hover" id="booking-history-table">
+			<thead>
+				<tr>
+					<th class="text-center">Date</th>
+					<th class="text-center">Therapy</th>
+					<th class="text-center">Camera</th>
+					<th class="text-center">Status</th>
+					<th class="text-center">Actions</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				#[collection: bookings]
+
+				#[pre]#[/pre]
+
+				#[each]
+				<tr>
+					<td>#date</td>
+					<td>#therapy-name</td>
+					<td>#camera-type-label, #camera-room-number</td>
+					<td>#status</td>
+					<td>
+						#[ifperm: VIEW_APPOINTMENTS]
+						<a href="/booking-details/#booking-id" class="btn btn-default info-button">
+							<i class="fa fa-list-alt"></i> View Full Details
+						</a>
+						#[/ifperm]
+						#[!ifperm: VIEW_APPOINTMENTS]
+						-
+						#[/!ifperm]
+					</td>
+				</tr>
+				#[/each]
+
+				#[post]#[/post]
+
+				#[empty]#[/empty]
+
+				#[/collection]
+			</tbody>
+		</table>
 	</div>
 </div>
 
-<script src="/js/patient-history.js"></script>
+<script src="/js/patient-details.js"></script>
 #[/if]
 
 ##_footer.html
