Fixed icons on CRUD pages

--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -30,8 +30,8 @@
 					<td>#label</td>
 					<td>
                         #[ifperm: EDIT_CAMERAS]
-						<button class="btn edit-button" id="edit-btn" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
-						<button class="btn delete-button" id="delete-btn" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
+						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_CAMERAS]
                         -
