--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -33,8 +33,8 @@
 					<td>#date-of-birth</td>
 					<td>
                         #[ifperm: EDIT_PATIENTS]
-						<button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
+						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_PATIENTS]
                         -
