--- a/src/main/resources/static/select-staff.html
+++ b/src/main/resources/static/select-staff.html
@@ -32,7 +32,7 @@
 					<td>#name</td>
 					<td>#role-label</td>
 					<td>
-						<button class="btn link-button" data-target="/#target/#id">Select</button>
+						<button class="btn link-button" data-target="/#target/#id"><i class="fa fa-check-circle"></i> Select</button>
 					</td>
 				</tr>
 				#[/each]
