--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -34,8 +34,8 @@
 					<td>#role-label</td>
 					<td>
                         #[ifperm: EDIT_STAFF]
-						<button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
+						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_STAFF]
                         -
