--- a/src/main/resources/static/tracers.html
+++ b/src/main/resources/static/tracers.html
@@ -31,8 +31,8 @@
 					<td>#order-time day(s)</td>
 					<td>
                         #[ifperm: EDIT_TRACERS]
-                        <button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
+						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_TRACERS]
                         -
