--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -32,8 +32,8 @@
 					<td>#room-number</td>
                     <td>
                         #[ifperm: EDIT_CAMERAS]
-						<button class="btn edit-button" data-id="#id">Edit</button>
-                        <button class="btn delete-button" data-id="#id">Delete</button>
+						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_CAMERAS]
                         -
