--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -40,8 +40,8 @@
 					<td>#end-time</td>
 					<td>
                         #[ifperm: EDIT_STAFF_AVAILABILITIES]
-						<button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
+						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_STAFF_AVAILABILITIES]
                         -
