--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -30,8 +30,8 @@
 					<td>#HTMLOKAY:permission-summary</td>
 					<td>
                         #[ifperm: EDIT_STAFF_ROLES]
-						<button class="btn edit-button" data-id="#id">Edit</button>
-						<button class="btn delete-button" data-id="#id">Delete</button>
+						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
+						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
                         #[/ifperm]
                         #[!ifperm: EDIT_STAFF_ROLES]
                         -
