--- a/src/main/resources/static/patient-details.html
+++ b/src/main/resources/static/patient-details.html
@@ -49,7 +49,7 @@
 <div class="row">
 	<div class="col-lg-12">
 		<h1 class="page-header">
-			Patient History
+			Booking History
 		</h1>
 	</div>
 </div>
@@ -80,9 +80,9 @@
 					<td>#status</td>
 					<td>
 						#[ifperm: VIEW_APPOINTMENTS]
-						<a href="/booking-details/#booking-id" class="btn btn-default info-button">
-							<i class="fa fa-list-alt"></i> View Full Details
-						</a>
+						<button class="btn link-button info-button" data-target="/booking-details/#booking-id">
+							<i class="fa fa-list-alt"></i> View Details
+						</button>
 						#[/ifperm]
 						#[!ifperm: VIEW_APPOINTMENTS]
 						-
