Basic booking details page

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -114,8 +114,8 @@
 						#[/ifperm]
 						#[ifperm: VIEW_APPOINTMENTS]
 						<li
-						#[if: current-page = appointments] class="active"#[/if]>
-						<a href="/appointments"><i class="fa fa-fw fa-lg fa-clock-o"></i> Appointments</a>
+						#[if: current-page = bookings] class="active"#[/if]>
+						<a href="/appointments"><i class="fa fa-fw fa-lg fa-clock-o"></i> Bookings</a>
 						</li>
 						#[/ifperm]
 						<li>
