--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -37,7 +37,7 @@
 						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
 						#[/ifperm]
 						#[ifperm: VIEW_PATIENT_DETAILS]
-						<button class="btn info-button link-button" data-target="/patient-details/#id"><i class="fa fa-list-alt"></i> Info</button>
+						<button class="btn info-button link-button" data-target="/patient-details/#id"><i class="fa fa-list-alt"></i> View Details</button>
 						#[/ifperm]
 					</td>
 				</tr>
