"No schedule" message

--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -84,7 +84,7 @@
 
 		#[post]#[/post]
 
-		#[empty]#[/empty]
+		#[empty]<p>This booking currently has no schedule.</p>#[/empty]
 
 		#[/collection]
 	</div>
