--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -54,67 +54,10 @@
 	</div>
 </div>
 
-<div class="modal hide fade edit-modal">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h3 class="edit-mode">Edit Patient</h3>
-				<h3 class="create-mode">Create Patient</h3>
-			</div>
-			<div class="modal-body">
-				<form class="form-horizontal edit-form">
-					<input type="hidden" name="entity-type" value="patient"/>
-					<input type="hidden" name="entity-id" value="0"/>
-					<div class="form-group">
-						<label for="name" class="col-sm-3 control-label">Name</label>
-						<div class="col-sm-9">
-							<input class="form-control" type="text" name="name" id="name"/>
-							<p class="help-block"> Enter the patient's full name.</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="hospital-number" class="col-sm-3 control-label">Hospital Number</label>
-						<div class="col-sm-9">
-							<input class="form-control" type="text" name="hospital-number" id="hospital-number"/>
-							<p class="help-block">Enter the patient's hospital number.</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label">Date of Birth</label>
-						<div class="col-sm-9">
-							<div class="col-sm-4" style="padding-left: 0;">
-								<select class="form-control" name="year-of-birth" id="year-of-birth">
-									<option value="" disabled selected>Year</option>
-								</select>
-							</div>
-							<div class="col-sm-5">
-								<select class="form-control" name="month-of-birth" id="month-of-birth" disabled>
-									<option value="" disabled selected>Month</option>
-								</select>
-							</div>
-							<div class="col-sm-3">
-								<select class="form-control" name="day-of-birth" id="day-of-birth" disabled>
-									<option value="">Day</option>
-								</select>
-							</div>
-							<br style="clear: both"/>
-							<p class="help-block">Select the patient's date of birth.</p>
-						</div>
-					</div>
-
-				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel">Cancel</button>
-				<button type="button" class="btn btn-primary btn-save">Ok</button>
-			</div>
-		</div>
-	</div>
-</div>
+##patient-edit-modal.html
 
 <script src="/js/patients.js"></script>
 <script src="/js/date-selector.js"></script>
-
 
 #[def: entity-name-title = Patient]
 #[def: entity-name-body = patient]
