Password reminder now shows if there are 9 days or less remaining before they are forced to change passwords. Next, implement a kamehameha method that will blast them to the Profile Page to change their passwords if it's been more than 90 days.

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -172,10 +172,9 @@
 				<div class="container-fluid">
 					<div class="row">
                         <div class="col-lg-12">
-                            #[def: password-reminder = yes]
-                            #[if: password-reminder = yes]
+                            #[if: show-password-reminder = yes]
                             <div class="alert alert-warning" style="margin-top: 50px" role="alert">
-                                You have #pass-days-remaining days remaining before you will be forced to change your password. <a href="/profile">Change it now.</a>
+                                You have #days-since-password-changed days remaining before you will be forced to change your password. <a href="/profile">Change it now.</a>
                             </div>
                             #[/if]
 							<h1 class="page-header">
