--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -42,7 +42,7 @@
 		<p><strong>Status:</strong></p>
 	</div>
 	<div class="col-md-8 col-lg-8">
-		<p>#status</p>
+		<p>#HTMLOKAY:status-with-label</p>
 	</div>
 </div>
 
