Booking status labels on patient history

--- a/src/main/resources/static/patient-details.html
+++ b/src/main/resources/static/patient-details.html
@@ -85,7 +85,7 @@
 					<td>#date</td>
 					<td>#therapy-name</td>
 					<td>#camera-type-label, #camera-room-number</td>
-					<td>#status</td>
+					<td>#HTMLOKAY:status-with-label</td>
 					<td>
 						#[ifperm: VIEW_APPOINTMENTS]
 						<button class="btn link-button info-button" data-target="/booking-details/#booking-id">
